service/clusterIP.yaml
apiVersion: v1
kind: Service
metadata:  
    name: my-service
    namespace: frontend
spec:
    selector: 
        app: nginx
    ports:
        - port: 80
