service/headless.yaml
apiVersion: v1
kind: Service
metadata:  
    name: my-service-headless
    namespace: frontend
spec:
    clusterIP: None
    selector: 
        app: my-app
    ports:
        - name: http
          port: 80
          targetPort: 80
