service/node-port.yaml
apiVersion: v1
kind: Service
metadata:  
    name: my-service
    namespace: frontend
spec:
    type: NodePort
    selector: 
        app: my-app
    ports:
        - name: http
          port: 80
          targetPort: 80
          nodePort: 32000
