service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      -  159-89-210-92.nip.io
      secretName: echo-tls
  rules:
  - host: 159-89-210-92.nip.io
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: my-service
              port:
                number: 80
